@@ -7,6 +7,7 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: [ 2023623 ] Krusader kept running after closing the main window
     FIXED: [ 1671543 ] horizontal/vertical mode fix in the Window menu
     FIXED: [ 1845105 ] mimetype magic can be disabled again
     FIXED: [ 2062651 ] Ctrl+Up selects the URL in the origin editbox
